# ekx

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTES.md  README.md  TASKS.md  auto-update.js  build-native.ts  build.py  build.ts  cli.js  clion-debug  clion-release  conanfile.py  deno.jsonc  env.sh  import_map.json  native-build.ts  native-coverage.ts  package-lock.json  package.json  run-test-native.js  tsconfig-tsc.json  tsconfig.json  wasm-release
appbox/: CHANGELOG.md  CMakeLists.txt  ek.js  package.json
appbox/src/: CMakeLists.txt
appbox/src/appbox/: Ads.cpp  Ads.hpp  AppBox.cpp  AppBox.hpp  Settings.cpp  Settings.hpp  ads.cpp  ads.hpp
core/: CMakeLists.txt  ek.js  ek.xml
core/ecxx/: ecxx.hpp
core/ecxx/impl/: FreeList32.hpp  components_db.hpp  context.hpp  ecxx.cpp  entity.hpp  entity_map.hpp  entity_pool.hpp  identity_generator.hpp  runtime_view.hpp  rview.hpp  sparse_vector.hpp  utility.hpp  view.hpp  view_backward.hpp  view_forward.hpp  view_runtime.hpp  world.hpp
core/ek/: Allocator.cpp  Allocator.hpp  Localization.cpp  Localization.hpp  assert.hpp  config.hpp  timers.cpp  timers.hpp
core/ek/binpack/: README.md  max_rects.hpp
core/ek/ds/: Array.hpp  BitVector.hpp  DynArray.hpp  Hash.hpp  PodArray.hpp  SmallArray.hpp  SparseArray.hpp  StaticHistoryBuffer.hpp  StaticRingBuffer.hpp
core/ek/imaging/: ImageSubSystem.cpp  decoder.cpp  decoder.hpp  drawing.hpp  fast_blur.cpp  filters.cpp  image.cpp  image.hpp
core/ek/math/: bounds_builder.hpp  box.hpp  collisions.hpp  collisions_sweep.cpp  color_transform.hpp  common.hpp  easing.hpp  hvs_color.hpp  mat.hpp  mat2x2.hpp  mat3x2.hpp  mat3x3.hpp  mat4x4.hpp  matrix_camera.hpp  matrix_transform.hpp  matrix_transpose.hpp  packed_color.hpp  packed_color.test.cpp  quaternion.hpp  rand.cpp  rand.hpp  serialize_math.hpp  transform.hpp  vec.hpp  vec_fwd.hpp
core/ek/serialize/: core.hpp  streams.hpp  types.hpp
core/ek/util/: Res.hpp  StaticSignal.hpp  StaticStorage.hpp  assets.hpp  base64.cpp  base64.hpp  clock.cpp  clock.hpp  common_macro.hpp  detect_platform.hpp  locator.hpp  logger.cpp  logger.hpp  path.cpp  path.hpp  signals.hpp  static_history_buffer.hpp  strings.cpp  strings.hpp  timer.hpp  utf8.hpp
core/src/: CMakeLists.txt
core/src/ek/: array_buffer.hpp  assets.hpp  bit_vector.hpp  logger.cpp  logger.hpp  timer.cpp  timer.hpp
core/src/stb/: stb_image.cpp
core/test/: CMakeLists.txt  base64_test.cpp  bit_vector_test.cpp  common_macro_test.cpp  logger_test.cpp  signal_test.cpp  string_utility_test.cpp
demo/: .firebaserc  .gitignore  CMakeLists.txt  GoogleService-Info.plist  debug2.keystore  ek.js  firebase.json  google-services.json  release.keystore
demo/assets/: 3d.asset.xml  3d.frag.glsl  Comfortaa-Regular.asset.xml  Cousine-Regular.asset.xml  TickingTimebombBB.asset.xml  _default_glyph_cache.asset.xml  _main_atlas.asset.xml  mini.asset.xml  res.fla  tests.asset.xml
demo/assets/shaders/: oren-nayar.glsl
demo/assets/skybox/: skybox.asset.xml
demo/assets/tests/: DOMDocument.xml  PublishSettings.xml
demo/src/: demo_main.cpp  demo_main.hpp  sample_base.cpp  sample_base.hpp  sample_flash.cpp  sample_flash.hpp  sample_integrations.cpp  sample_integrations.hpp  sample_text.cpp  sample_text.hpp
demo/src/3d/: camera_arcball.cpp  sample_3d.cpp  sample_3d.hpp
demo/src/piko/: examples.cpp  examples.h  piko.h  sample_piko.cpp  sample_piko.hpp
demo/src/sim/: Motion.cpp  Motion.hpp  SampleSim.cpp  SampleSim.hpp  driver_node_script.cpp  driver_node_script.h  motion_system.cpp
demo/src/ui/: minimal.cpp  minimal.hpp
ecxx/test/: CMakeLists.txt  bit_count_test.cpp  entity_map_test.cpp  entity_value_test.cpp  sparse_vector_test.cpp  view_test.cpp
ecxx/test/common/: identity_generator_shared.hpp
editor/cli/: CMakeLists.txt  cli_main.cpp  main.cpp
editor/src/: CMakeLists.txt
editor/src/ekc/: build_web.cpp  create_android.cpp  create_xcode_ios.cpp  ekc.hpp  generate_project_common.cpp  generate_project_common.hpp  process_asset_flash.cpp  process_assets.cpp  process_market_assets.cpp  process_market_assets.hpp  project_config.cpp  project_config.h  project_config.hpp  project_config_detect.cpp  project_config_templating.cpp  template_vars.cpp  template_vars.h
editor/src/plist/: README.md  base64.hpp  date.cpp  date.hpp  plist.cpp  plist.hpp
editor/test/: CMakeLists.txt  ekc-test  plist_test.cpp
editor/test/test-data/: xmlExampleWritten.plist
ek/: CMakeLists.txt  build_shaders.sh  ek.js  ek.xml
ek/src/: CMakeLists.txt
ek/src/baseapp/: base_app.cpp  base_app.hpp
ek/test/: CMakeLists.txt  dummy_test.cpp
ekc/: .gitignore  CHANGELOG.md  CMakeLists.txt  package.json
ekc/scripts/: build.js
ekx/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.js  package.json
ekx/app/: CMakeLists.txt  ek.js
ekx/appbox/: CMakeLists.txt
ekx/core/: CMakeLists.txt  ek.js
ekx/dev-tools/: CMakeLists.txt  README.md
ekx/ek/: CMakeLists.txt  ek.js
ekx/physics/: CMakeLists.txt
ekx/research/: research_DynArray.cpp  research_SmallArray.cpp  research_WorldByIndex.cpp
ekx/scenex/: CMakeLists.txt  build_shaders.sh  ek.js
ekx/sg-file/: CMakeLists.txt  ek.js
examples/sample-2-drawing/: CMakeLists.txt  ek.ts
extensions/audiomini/: CMakeLists.txt  ek.js
extensions/mini-ads/: CMakeLists.txt  ek.js
flash/: CHANGELOG.md  CMakeLists.txt  README.md
flash/src/: CMakeLists.txt
plugins/admob/: CHANGELOG.md  CMakeLists.txt  ek.js  ek.ts  package.json
plugins/billing/: CHANGELOG.md  CMakeLists.txt  ek.js  ek.ts  package.json
plugins/firebase/: .gitignore  CHANGELOG.md  CMakeLists.txt  build.ts  ek.js  ek.ts  package.json
plugins/game-services/: CHANGELOG.md  CMakeLists.txt  README.md  ek.js  ek.ts  package.json
samples/js-script-test/: CHANGELOG.md  CMakeLists.txt  ek.js  ek.ts  package.json
samples/picos/: CMakeLists.txt  GoogleService-Info.plist  README.md  ek.js  google-services.json  quack.keystore
scenex/: CMakeLists.txt  build_shaders.sh  ek.js
scenex/test/: CMakeLists.txt  dummy_text_format_test.cpp
tests/core-test/: CMakeLists.txt
(+2070 files in other folders)
